--- a/charts/keys/templates/admin/service.yaml
+++ b/charts/keys/templates/admin/service.yaml
@@ -19,5 +19,5 @@ spec:
       name: http
       targetPort: http
   selector:
-    {{- include "keys.admin.labels" . | nindent 4 }}
+    {{- include "keys.admin.selectorLabels" . | nindent 4 }}
 {{- end }}
