Replace readiness probe via init container

--- a/charts/keys/templates/migrate/job.yaml
+++ b/charts/keys/templates/migrate/job.yaml
@@ -22,16 +22,17 @@ spec:
         {{- include "keys.migrate.labels" . | nindent 8 }}
     spec:
       restartPolicy: Never
+      initContainers:
+        - name: delay
+          image: {{ required "A valid .Values.dgctlDockerRegistry entry required" .Values.dgctlDockerRegistry }}/{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}
+          command: [ "sh", "-c", "sleep {{ .Values.migrate.initialDelaySeconds }}" ]
+          resources:
+            {{- toYaml .Values.migrate.resources | nindent 12 }}
       containers:
         - name: migrate
           image: {{ required "A valid .Values.dgctlDockerRegistry entry required" .Values.dgctlDockerRegistry }}/{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           command: [ "zuul-migrate" ]
-          readinessProbe:
-            exec:
-              command: [ "zuul-migrate", "--help" ]
-            initialDelaySeconds: {{ .Values.migrate.initialDelaySeconds }}
-            failureThreshold: 1
           resources:
             {{- toYaml .Values.migrate.resources | nindent 12 }}
           env:
