--- a/charts/gis-platform/values.yaml
+++ b/charts/gis-platform/values.yaml
@@ -93,6 +93,10 @@ portal:
     regex:
     - ^/sp/wms.*layers=admin.satellite_imagery&.*$
     - ^/sp/wms.*layers=admin.2gis&.*$
+  s3proxy:
+    enabled: false
+    scheme: http
+    #host
   image:
     repository: 2gis-on-premise/gis_platform_portal
     tag: '2022-04-13'
